--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,9 @@
 
 {% block content %}
 <p>Hello You have Logged in as {{ email }}</p>
+{% for ids in cf_id_list %}
+    <div>{{ids}}</div>
+{% endfor %}
 <form action="" method="post">
     <!-- <div class="form-group">
       <label for="UserName">User name</label>
