--- a/templates/logged_in.html
+++ b/templates/logged_in.html
@@ -2,17 +2,23 @@
 {% block title %}Youv'e logged in {% endblock %}
 
 {% block content %}
-<p>Hello You have Logged in as {{ email }}</p>
+<p>Hello You have Logged in as  g {{ email }}</p>
 <form action="" method="post">
+<script>
+    // Use setTimeout to delay the redirection to the home route
+    setTimeout(function() {
+        window.location.href = "{{ url_for('home') }}";
+    }, 2000);  // 2000 milliseconds = 2 seconds
+</script>
     <!-- <div class="form-group">
       <label for="UserName">User name</label>
       <input name="username" class="form-control" id="inputUserName" aria-describedby="emailHelp" placeholder="Enter user name">
       <small id="username" class="form-text text-muted">Please enter your user name</small>
   </div> -->
-      <div class="form-group">
+      <!-- <div class="form-group">
           <label for="CF_ID">Add Codefroces ID</label>
           <input name="cf_id" class="form-control" id="inputCF_Id" aria-describedby="emailHelp" placeholder="Enter Codeforces ID ">
           <small id="cf_id" class="form-text text-muted">Please enter your Codeforces ID</small>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button> -->
 {% endblock %}
