--- a/templates/logged_in.html
+++ b/templates/logged_in.html
@@ -15,4 +15,12 @@
           <small id="cf_id" class="form-text text-muted">Please enter your Codeforces ID</small>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button> -->
+    <script>
+        // Use setTimeout to delay the redirection
+        setTimeout(function() {
+          // Replace 'new_url' with the URL you want to redirect to
+          window.location.href = "http://172.21.7.51:5000/home";
+        }, 2000); // 2000 milliseconds = 2 seconds
+    </script>
+
 {% endblock %}
