--- a/templates/home.html
+++ b/templates/home.html
@@ -1,21 +1,33 @@
 {% extends "base.html" %}
-{% block title %}Youv'e logged in {% endblock %}
+{% block title %}You've logged in{% endblock %}
 
 {% block content %}
 <p>Hello You have Logged in as {{ email }}</p>
+
 {% for ids in cf_id_list %}
-        <a href="http://172.21.5.200:5000/home/{{ ids }}"class="btn btn-primary" role="button">Codeforces ID: {{ ids }}</a>
+    <script>
+        // Get the current URL
+        var currentURL = window.location.href;
+
+        // Create a link for each Codeforces ID
+        var link = document.createElement('a');
+        var id = "{{ ids }}";  // Use double curly braces to include the variable in the script
+        console.log(link);
+        link.href = currentURL  +"/"+ id;  // Use the variable directly here
+        link.className = "btn btn-primary";
+        link.role = "button";
+        link.textContent = "Codeforces ID: " + id;  // Use the variable directly here
+        document.body.appendChild(link);
+    </script>
 {% endfor %}
+
 <form action="" method="post">
-    <!-- <div class="form-group">
-      <label for="UserName">User name</label>
-      <input name="username" class="form-control" id="inputUserName" aria-describedby="emailHelp" placeholder="Enter user name">
-      <small id="username" class="form-text text-muted">Please enter your user name</small>
-  </div> -->
-      <div class="form-group">
-          <label for="CF_ID">Add Codefroces ID</label>
-          <input name="cf_id" class="form-control" id="inputCF_Id" aria-describedby="emailHelp" placeholder="Enter Codeforces ID ">
-          <small id="cf_id" class="form-text text-muted">Please enter your Codeforces ID</small>
+    <div class="form-group">
+        <label for="CF_ID">Add Codeforces ID</label>
+        <input name="cf_id" class="form-control" id="inputCF_Id" aria-describedby="emailHelp" placeholder="Enter Codeforces ID">
+        <small id="cf_id" class="form-text text-muted">Please enter your Codeforces ID</small>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
 {% endblock %}
